# w3cos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ai-pr-review.yml  build-iso.yml  ci.yml
.openclaw/: config.json  implement.lobster.json  review.lobster.json  triage.lobster.json
crates/w3cos-a11y/src/: lib.rs  role.rs  tree.rs
crates/w3cos-ai-bridge/: Cargo.toml
crates/w3cos-ai-bridge/src/: a11y_api.rs  agent.rs  dom_access.rs  lib.rs  permissions.rs  screenshot.rs  server.rs
crates/w3cos-cli/: Cargo.toml
crates/w3cos-cli/src/: dev.rs  main.rs  mobile.rs
crates/w3cos-compiler/: Cargo.toml
crates/w3cos-compiler/src/: codegen.rs  css_parser.rs  css_values.rs  esm_codegen.rs  esm_css.rs  esm_lowering.rs  esm_resolver.rs  lib.rs  media_query.rs  mobile_codegen.rs  npm_bridge.rs  parser.rs  scope_analysis.rs  style_matcher.rs  ts_transpiler.rs  ts_types.rs  web_api_skeleton.rs  web_codegen.rs
crates/w3cos-compiler/tests/: compile_smoke.rs  mobile_codegen_smoke.rs  monaco_graph.rs  web_codegen_smoke.rs
crates/w3cos-core/: Cargo.toml
crates/w3cos-core/src/: builtins.rs  class.rs  collections.rs  host.rs  host_modules.rs  json.rs  lib.rs  object.rs  promise.rs  proxy.rs  reactive.rs  regexp.rs  value.rs  web.rs
crates/w3cos-demo/: Cargo.toml
crates/w3cos-demo/src/: main.rs
crates/w3cos-dom/: Cargo.toml
crates/w3cos-dom/src/: atom.rs  canvas.rs  css_style.rs  document.rs  dom_rect.rs  element.rs  events.rs  history.rs  host_runtime.rs  lib.rs  location.rs  node.rs  selection.rs  stylesheet.rs  user_agent.rs  window.rs
crates/w3cos-ffi/: Cargo.toml
crates/w3cos-ffi/src/: lib.rs
crates/w3cos-mobile/: Cargo.toml  README.md
crates/w3cos-mobile/src/: android.rs  lib.rs  lifecycle.rs  manifest.rs  safe_area.rs  touch.rs
crates/w3cos-react-compat/: Cargo.toml
crates/w3cos-react-compat/src/: lib.rs
crates/w3cos-rn-compat/: Cargo.toml
crates/w3cos-rn-compat/src/: lib.rs
crates/w3cos-runtime/: Cargo.toml
crates/w3cos-runtime/examples/: pwa_install.rs  worker_prime_sieve.rs
crates/w3cos-runtime/src/: animation.rs  canvas2d.rs  clipboard.rs  compositor.rs  dialog.rs  dom.rs  dom_constructors.rs  eventsource.rs  fetch.rs  filter.rs  fling.rs  font_face.rs  frame_cache.rs  fs.rs  fs_watch.rs  gpu_filter.rs  history.rs  image_loader.rs  indexed_db.rs  indexed_db_sqlite.rs  indexed_db_web.rs  ios_input.rs  ipc.rs  jsdom.rs  layout.rs  lib.rs  manifest.rs  media.rs  menu.rs  multi_window.rs  notification.rs  observers.rs  overscroll.rs  paint_artifact.rs  perf.rs  process.rs  pty.rs  pwa.rs  render.rs  render_cpu.rs  (+17 more)
crates/w3cos-runtime/src/devtools/: cdp.rs  mod.rs  server.rs
crates/w3cos-runtime/tests/: api_integration.rs  codemirror_compat.rs  w3c_feature_matrix.rs
crates/w3cos-shell/: Cargo.toml
crates/w3cos-shell/src/: main.rs
crates/w3cos-std/src/: color.rs  component.rs  keyboard_inset.rs  lib.rs  safe_area.rs  style.rs  viewport.rs
demo/: Dockerfile  README.md  deploy-hf.sh  fly.toml  start.sh  supervisord.conf
demo/hf-space/: Dockerfile  README.md  start.sh
docs/: MOBILE.md  blog-post-hn-neutral.md  indexeddb-conformance.md  monaco-gap-report.md  vscode-compat.md
examples/adaptive-layout/: app.tsx
examples/ai-agent/: app.tsx
examples/calculator/: app.ts  app.tsx
examples/chat-ui/: app.ts  app.tsx
examples/counter/: app.tsx
examples/css-demo/: app.tsx  styles.css
examples/dashboard/: app.tsx
examples/desktop-shell/: app.tsx
examples/file-manager/: app.tsx
examples/general-ts/: app.ts
examples/hello/: app.tsx
examples/image-demo/: app.tsx
examples/login-form/: app.ts  app.tsx
examples/mobile-demo/: README.md  app.tsx  w3cos.app.json
examples/monaco-editor/: app.ts  native.css  package-lock.json  package.json
examples/scss-demo/: app.tsx  theme.scss
examples/settings-panel/: app.ts  app.tsx
examples/showcase/: app.tsx
examples/terminal/: app.tsx
examples/transition-demo/: app.ts
examples/transitions/: app.ts
examples/weather/: app.ts  app.tsx
scripts/: build-cjk-subset.sh
system/: INSTALL.md
system/rootfs_overlay/etc/: issue
system/rootfs_overlay/etc/init.d/: S99w3cos
system/scripts/: post-build.sh  run-qemu.sh
templates/android/: README.md  settings.gradle.kts
templates/android/app/: build.gradle.kts
templates/android/app/src/main/: AndroidManifest.xml
templates/android/app/src/main/java/com/example/w3cos/: W3cosActivity.kt
templates/harmony/: README.md  build-profile.json5  oh-package.json5
templates/harmony/AppScope/: app.json5
templates/harmony/entry/: build-profile.json5  oh-package.json5
templates/harmony/entry/src/main/: module.json5
templates/harmony/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
templates/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
templates/harmony/entry/src/main/ets/pages/: Index.ets
templates/harmony/entry/src/main/resources/base/element/: color.json  string.json
templates/ios/: README.md
templates/ios/W3cosApp/: AppDelegate.swift  Info.plist  ViewController.swift
templates/ios/W3cosApp.xcodeproj/: project.pbxproj
templates/shared/: app.tsx  w3cos.app.json
tests/wpt/: indexeddb-subset.json
