[workspace]
resolver = "2"
members = [
    "crates/w3cos-core",
    "crates/w3cos-runtime",
    "crates/w3cos-compiler",
    "crates/w3cos-cli",
    "crates/w3cos-std",
    "crates/w3cos-dom",
    "crates/w3cos-a11y",
    "crates/w3cos-ai-bridge",
    "crates/w3cos-demo",
    "crates/w3cos-shell",
    "crates/w3cos-rn-compat",
    "crates/w3cos-react-compat",
    "crates/w3cos-ffi",
    "crates/w3cos-mobile",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wangnaihe/w3cos"

[workspace.dependencies]
w3cos-core = { path = "crates/w3cos-core" }
w3cos-runtime = { path = "crates/w3cos-runtime", default-features = false }
w3cos-compiler = { path = "crates/w3cos-compiler" }
w3cos-std = { path = "crates/w3cos-std" }
w3cos-dom = { path = "crates/w3cos-dom" }
w3cos-a11y = { path = "crates/w3cos-a11y" }
w3cos-ai-bridge = { path = "crates/w3cos-ai-bridge" }
w3cos-rn-compat = { path = "crates/w3cos-rn-compat" }
w3cos-react-compat = { path = "crates/w3cos-react-compat" }
w3cos-mobile = { path = "crates/w3cos-mobile" }
png = "0.17"
image = "0.25"

# Layout: Taffy 0.9 — Flexbox + Grid + Block + position
taffy = { version = "0.9", features = ["std", "flexbox", "grid", "block_layout", "content_size"] }

# Text layout: Parley — line-breaking, shaping, bidi, inline boxes
parley = "0.7"
fontdue = "0.9"

# Rendering: Skia (Blink-aligned primary) + Vello/tiny-skia compatibility backends
vello = { path = "third_party/vello" }
skrifa = "0.36"
pollster = "0.4"
tiny-skia = "0.11"

# Windowing
winit = "0.30"
softbuffer = "0.4"

# HTTP client for Fetch API
ureq = { version = "3", features = ["json"] }

# DevTools (Chrome DevTools Protocol over WebSocket)
tungstenite = "0.24"

# Native capability extensions
notify = { version = "7", features = ["macos_fsevent"] }
sysinfo = "0.33"
nix = { version = "0.29", features = ["process", "signal", "fs", "user", "mman", "mqueue"] }
tempfile = "3"
glob = "0.3"
libloading = "0.8"

# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
