[package]
name = "w3cos-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS showcase demo binary — pre-compiled from examples/showcase/app.tsx"

[[bin]]
name = "w3cos-demo"
path = "src/main.rs"

[dependencies]
w3cos-runtime = { workspace = true }
w3cos-std = { workspace = true }
