[package]
name = "w3cos-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS mobile platform — touch, safe area, lifecycle; Android/iOS host integration"

[dependencies]
w3cos-runtime = { workspace = true }
w3cos-std = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
log = "0.4"
android_logger = "0.14"

[lib]
crate-type = ["lib", "cdylib"]
