[package]
name = "w3cos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS native runtime — layout engine, renderer, window manager, and system bridge"

[features]
default = ["gpu"]
gpu = ["dep:vello", "dep:skrifa", "dep:pollster"]
cpu-render = ["dep:tiny-skia", "dep:softbuffer"]
devtools = []
ai-bridge = ["dep:w3cos-ai-bridge"]

[dependencies]
w3cos-std = { workspace = true }
w3cos-dom = { workspace = true }
w3cos-ai-bridge = { workspace = true, optional = true }
taffy = { workspace = true }
parley = { workspace = true }
fontdue = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { workspace = true, features = ["android-game-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true }
image = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
notify-rust = "4"
arboard = "3.6.1"
notify = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
w3cos-ffi = { path = "../w3cos-ffi" }

# WebSocket client + DevTools
tungstenite = { workspace = true }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }

# GPU rendering (default)
vello = { workspace = true, optional = true }
skrifa = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# CPU rendering (fallback)
tiny-skia = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }
