[package]
name = "w3cos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS native runtime — layout engine, renderer, window manager, and system bridge"

[features]
default = ["gpu", "cpu-render"]
gpu = ["dep:vello", "dep:skrifa", "dep:pollster", "dep:bytemuck"]
cpu-render = ["dep:tiny-skia", "dep:softbuffer"]
devtools = []
ai-bridge = ["dep:w3cos-ai-bridge"]

[dependencies]
w3cos-std = { workspace = true }
w3cos-dom = { workspace = true }
w3cos-ai-bridge = { workspace = true, optional = true }
taffy = { workspace = true }
parley = { workspace = true }
fontdue = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
tempfile = { workspace = true }
glob = { workspace = true }
w3cos-ffi = { path = "../w3cos-ffi" }

# GPU rendering (default)
vello = { workspace = true, optional = true }
skrifa = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }

# CPU rendering (fallback)
tiny-skia = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { workspace = true, features = ["android-native-activity"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
winit = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5.2"
block2_05 = { package = "block2", version = "=0.5.1" }

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
winit = { workspace = true }

# Desktop-only system bridges (not available on iOS/Android)
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
ureq = { workspace = true }
notify-rust = "4"
arboard = "3.6.1"
notify = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
tungstenite = { workspace = true }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }

[dev-dependencies]
w3cos-a11y = { workspace = true }
w3cos-react-compat = { workspace = true }
w3cos-core = { workspace = true }

# Mobile-friendly HTTP + DevTools CDP (Chrome remote debug via adb forward / sim localhost)
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
ureq = { workspace = true }
tungstenite = { workspace = true }
