[package]
name = "w3cos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS native runtime — layout engine, renderer, window manager, and system bridge"

[features]
default = ["gpu", "cpu-render", "skia"]
gpu = ["dep:vello", "dep:skrifa", "dep:pollster", "dep:bytemuck"]
cpu-render = ["dep:tiny-skia", "dep:softbuffer"]
skia = ["dep:skia-safe"]
devtools = []
ai-bridge = ["dep:w3cos-ai-bridge"]

[dependencies]
w3cos-std = { workspace = true }
w3cos-dom = { workspace = true }
w3cos-ai-bridge = { workspace = true, optional = true }
taffy = { workspace = true }
parley = { workspace = true }
fontdue = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
tempfile = { workspace = true }
glob = { workspace = true }
w3cos-ffi = { path = "../w3cos-ffi" }
w3cos-react-compat = { workspace = true }
w3cos-core = { workspace = true }

# GPU rendering (default)
vello = { workspace = true, optional = true }
skrifa = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }

# CPU rendering (fallback)
tiny-skia = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { workspace = true, features = ["android-native-activity"] }
skia-safe = { version = "=0.93.1", optional = true, features = ["vulkan"] }
ash = "0.38"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
winit = { workspace = true }
skia-safe = { version = "=0.93.1", optional = true, features = ["metal"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5.2"
block2_05 = { package = "block2", version = "=0.5.1" }
objc2_06 = { package = "objc2", version = "0.6.3", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CAMetalLayer"] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "UIView", "UIResponder"] }

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
winit = { workspace = true }
skia-safe = { version = "=0.93.1", optional = true }

# Desktop-only system bridges (not available on iOS/Android)
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
ureq = { workspace = true }
notify-rust = "4"
arboard = "3.6.1"
notify = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
tungstenite = { workspace = true }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }

[dev-dependencies]
w3cos-a11y = { workspace = true }

# Mobile-friendly HTTP + DevTools CDP (Chrome remote debug via adb forward / sim localhost)
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
ureq = { workspace = true }
tungstenite = { workspace = true }
