[package]
name = "w3cos-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS Desktop Shell — the system-level GUI that replaces traditional desktop environments"

[[bin]]
name = "w3cos-shell"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["w3cos-runtime/gpu"]
cpu-render = ["w3cos-runtime/cpu-render"]
ai-bridge = ["w3cos-runtime/ai-bridge"]

[dependencies]
w3cos-runtime = { workspace = true, default-features = false }
w3cos-std = { workspace = true }
